package dev.fredpena.designpattern.behavioral.chainofresponsibility;

/**
 * @author me@fredpena.dev
 * @created 26/09/2025  - 08:47
 */
public interface ComponentWithContextualHelp {
    void showHelp();
}
